--- a/ShopFilip/Views/Admin/AllProducts.cshtml
+++ b/ShopFilip/Views/Admin/AllProducts.cshtml
@@ -36,8 +36,8 @@
                             }
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                            <a asp-action="Edit" asp-route-id="@item.Id">Edytuj</a> |
+                            <a asp-action="Delete" asp-route-id="@item.Id">Usuń produkt</a>
                         </td>
                     </tr>
                 }
