--- a/ShopFilip/Views/Cart/Index.cshtml
+++ b/ShopFilip/Views/Cart/Index.cshtml
@@ -1,89 +1,97 @@
 ﻿@using ShopFilip.IdentityModels
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Identity
-@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @model ShopFilip.Models.Item
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
-<link rel="stylesheet" type="text/css" href="~/css/ShoppingCart.css">
-<link rel="stylesheet" type="text/css" href="~/css/Product.css">
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
+@{
+    ViewData["Title"] = "Koszyk";
+}
+@section CssLinks {
+    <link rel="stylesheet" type="text/css" href="~/css/ShoppingCart.css">
+    <link rel="stylesheet" type="text/css" href="~/css/Product.css">
+}
 <div class="container">
-    <h3 class="title">Shopping Cart</h3>
-    <table cellpadding="2" cellspacing="2" border="1">
-        <tr>
-            <th>Remove from cart</th>
-            <th>Name</th>
-            <th>Photo</th>
-            <th>Price</th>
-            <th>Quantity</th>
-            <th>Size</th>
-            <th>Total</th>
-        </tr>
-        @foreach (var item in ViewBag.cart)
-        {
+    @if (ViewBag.cart != null)
+    {
+        <h3 class="title">Koszyk</h3>
+        <table cellpadding="2" cellspacing="2" border="1">
             <tr>
-                <td><a asp-controller="cart" asp-action="remove" asp-route-id="@item.Product.Id">Remove</a></td>
-                <td>@item.Product.Name</td>
-                <td><img class="photoInCart" src="@item.Product.Photos[0].Value" alt="" /></td>
-                <td>@item.Product.Price</td>
-                <td>@item.Quantity</td>
-                <td>@item.Size</td>
-                <td>@(item.Product.Price * item.Quantity)</td>
+                <th>Remove from cart</th>
+                <th>Name</th>
+                <th>Photo</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Size</th>
+                <th>Total</th>
             </tr>
-        }
-        <tr>
-            <td align="right" colspan="6">Sum</td>
-            <td>
-                @ViewBag.total
-            </td>
-        </tr>
-    </table>
-    <div style="display:flex; width:100%">
-        <div style="width:50%;padding-top:10px;display:flex;justify-content:flex-start" ;>
-            <button class="btn buyButton" onclick="goBack()">
-                <span class="price">🔙</span>
-                <span class="shopping-cart"><a class="fa fa-shopping-cart" aria-hidden="true">⬅️</a></span>
-                <a class="cart-btn" href="#">Back</a>
-            </button>
-        </div>
-        <div style="width:50%;padding-top:10px;display:flex;justify-content:flex-end">
-            @if (SignInManager.IsSignedIn(User))
+            @foreach (var item in ViewBag.cart)
             {
-                <form method="get" asp-controller="Cart" asp-action="myAction">
-                    <input type="hidden" name="Price" value="@ViewBag.total" />
-                    <input type="hidden" name="Id" value="@UserManager.GetUserId(User)" />
-                    <input type="hidden" id="ip" name="Ip" value="@HttpContextAccessor.HttpContext.Connection.RemoteIpAddress.ToString()" />
-                    <input type="hidden" name="BoughtProducts" value="@ViewBag.cart" />
-                    <button class="btn buyButton" type="submit">
-                        <span class="price">💰</span>
-                        <span class="shopping-cart"><a class="fa fa-shopping-cart" aria-hidden="true">🛍️</a></span>
-                        <a class="cart-btn" href="#">Buy!</a>
-                    </button>
-                </form>
+                <tr>
+                    <td><a asp-controller="cart" asp-action="remove" asp-route-id="@item.Product.Id">Remove</a></td>
+                    <td>@item.Product.Name</td>
+                    <td><img class="photoInCart" src="@item.Product.Photos[0].Value" alt="" /></td>
+                    <td>@item.Product.Price</td>
+                    <td>@item.Quantity</td>
+                    <td>@item.Size</td>
+                    <td>@(item.Product.Price * item.Quantity)</td>
+                </tr>
             }
-            else
-            {
-                <form method="get" asp-controller="Account" asp-action="Login">
-                    <input type="hidden" name="Price" value="@ViewBag.total" />
-                    <input type="hidden" name="Id" value="@UserManager.GetUserId(User)" />
-                    <input type="hidden" id="ip" name="Ip" value="@HttpContextAccessor.HttpContext.Connection.RemoteIpAddress.ToString()" />
-                    <input type="hidden" name="BoughtProducts" value="@ViewBag.cart" />
-                    <button class="btn buyButton" type="submit">
-                        <span class="price">💰</span>
-                        <span class="shopping-cart"><i class="fa fa-shopping-cart" aria-hidden="true">🛒</i></span>
-                        Buy!
-                    </button>
-                </form>
-            }
+            <tr>
+                <td align="right" colspan="6">Sum</td>
+                <td>
+                    @ViewBag.total
+                </td>
+            </tr>
+        </table>
+        <div style="display:flex; width:100%">
+            <div style="width:50%;padding-top:10px;display:flex;justify-content:flex-start" ;>
+                <button class="btn buyButton" onclick="goBack()">
+                    <span class="price">🔙</span>
+                    <span class="shopping-cart"><a class="fa fa-shopping-cart" aria-hidden="true">⬅️</a></span>
+                    <a class="cart-btn" href="#">Back</a>
+                </button>
+            </div>
+            <div style="width:50%;padding-top:10px;display:flex;justify-content:flex-end">
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <form method="get" asp-controller="Cart" asp-action="myAction">
+                        <input type="hidden" name="Price" value="@ViewBag.total" />
+                        <input type="hidden" name="Id" value="@UserManager.GetUserId(User)" />
+                        <input type="hidden" id="ip" name="Ip" value="@HttpContextAccessor.HttpContext.Connection.RemoteIpAddress.ToString()" />
+                        <input type="hidden" name="BoughtProducts" value="@ViewBag.cart" />
+                        <button class="btn buyButton" type="submit">
+                            <span class="price">💰</span>
+                            <span class="shopping-cart"><a class="fa fa-shopping-cart" aria-hidden="true">🛍️</a></span>
+                            <a class="cart-btn" href="#">Buy!</a>
+                        </button>
+                    </form>
+                }
+                else
+                {
+                    <form method="get" asp-controller="Account" asp-action="Login">
+                        <input type="hidden" name="Price" value="@ViewBag.total" />
+                        <input type="hidden" name="Id" value="@UserManager.GetUserId(User)" />
+                        <input type="hidden" id="ip" name="Ip" value="@HttpContextAccessor.HttpContext.Connection.RemoteIpAddress.ToString()" />
+                        <input type="hidden" name="BoughtProducts" value="@ViewBag.cart" />
+                        <button class="btn buyButton" type="submit">
+                            <span class="price">💰</span>
+                            <span class="shopping-cart"><i class="fa fa-shopping-cart" aria-hidden="true">🛒</i></span>
+                            Buy!
+                        </button>
+                    </form>
+                }
+            </div>
         </div>
-    </div>
-</div>
-
-<script src="~/lib/jquery/dist/jquery.js"></script>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script>
-    function goBack() {
-        window.history.back();
     }
-
-</script>
+    else
+    {
+        <div style="text-align:center; top: 50%; padding-top:20%;">
+            <h1>Koszyk jest pusty 😞</h1>
+        </div>
+    }
+</div>
+@section Scripts {
+    <script src="~/js/CustomJavaScripts.js"></script>
+}
